# HW_8_python_web

./: connect.py  consumer.py  consumer_email.py  consumer_sms.py  create.py  model_of_contact.py  model_of_contact_additional.py  models.py  producer.py  producer_additional.py  pyproject.toml  quotes.json  readme.txt  search.py
