[tool.poetry]
name = "hw-8-python-web"
version = "0.1.0"
description = ""
authors = ["evgen-kulik <e.kulik.atom@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_8_python_web"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.4.1"
mongoengine = "^0.27.0"
redis = "^4.6.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^19.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
